# bazel-spike

./: .bazelproject  .gitignore  .scalafmt.conf  README.md  WORKSPACE.bazel  maven_install.json
.run/: Main.run.xml
dependencies/: BUILD.bazel
project-application/: BUILD.bazel
project-application/src/main/resources/: hello.txt
project-application/src/main/scala/application/: Main.scala
project-application/src/main/scala/application/domain/greeter/: BUILD.bazel  Greeter.scala  PersonalGreeter.scala
project-application/src/main/scala/application/domain/sequence/: Sequence.scala
project-application/src/test/scala/application/domain/greeter/: BUILD.bazel  GreeterSpec.scala  PersonalGreeterSpec.scala
project-application/src/test/scala/application/domain/sequence/: BUILD.bazel  SequenceSpec.scala
project-library/: BUILD.bazel
project-library/src/test/resources/: hello-test.txt
