load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

#ScalaApplication binary target within project-application build
scala_binary(
    name = "app",
    srcs = glob(["src/main/scala/application/**/*.scala"]),
    main_class = "application/Main",
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//dependencies:akka",
        "//project-application/src/main/scala/application/domain/greeter:lib",
        "//project-application/src/main/scala/application/domain/sequence:lib",
        "//project-library:lib",
    ],
)
